syntax = "proto3";
package messages;
option csharp_namespace = "Domain.Protos.Messages";

import "elements/element.proto";

message ElementCreatedMessage {
	string page_id = 1;
	elements.Element element = 2;
}